# DRP_Creative

./: .drp_config  Cargo.toml  FUNDING.yml  README.md  build.rs  drp_config.toml  log.txt  processes.txt
.github/workflows/: rust.yml
icon/: icon.ai  tray-icon.rc
program icons/: Blender_logo_no_text.ai
src/: app.rs  build.rs  config.rs  main.rs  program_status.rs  self_updater.rs  tray_icon.rs
