[package]
name = "DRP_Creative"
version = "0.1.1"
edition = "2021"
author = "https://djkato.net"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.2"
regex = "1.6.0"
tray-item = "0.7.0"
[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
[build-dependencies]
windres = "*"