[package]
name = "drp_creative"
version = "1.0.1"
edition = "2021"
author = "https://djkato.net"

[dependencies]
discord-rich-presence = "0.2.2"
regex = "1.6.0"
tray-item = "0.7.0"
lazy_static = "1.4.0"
self_update = { version = "0.36.0", features = ["archive-zip"] }
win-msgbox = "0.1.2"

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"

# prefix binary with x86_64-pc-windows-msvc for self_updater
[[bin]]
name = "DRP_Creative--x86_64-pc-windows-msvc"
path = "src/main.rs"
